<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView

        android:id="@+id/textView"
        style="@style/title"
        android:text="@string/my_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/button_light"
        android:text="@string/media_streamer"
        android:id="@+id/btn_spotify"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/btn_capstone"
        android:layout_alignEnd="@+id/btn_capstone"
        android:layout_alignLeft="@+id/btn_capstone"
        android:layout_alignStart="@+id/btn_capstone" />

    <Button
        style="@style/button_light"
        android:text="@string/super_duo1"
        android:id="@+id/btn_duo1"
        android:layout_below="@+id/btn_spotify"
        android:layout_alignRight="@+id/btn_capstone"
        android:layout_alignEnd="@+id/btn_capstone"
        android:layout_alignLeft="@+id/btn_capstone"
        android:layout_alignStart="@+id/btn_capstone" />

    <Button
        style="@style/button_light"
        android:text="@string/super_duo2"
        android:id="@+id/btn_dou2"
        android:layout_below="@+id/btn_duo1"
        android:layout_alignRight="@+id/btn_capstone"
        android:layout_alignEnd="@+id/btn_capstone"
        android:layout_alignLeft="@+id/btn_capstone"
        android:layout_alignStart="@+id/btn_capstone" />

    <Button
        style="@style/button_light"
        android:text="@string/ant_terminator"
        android:id="@+id/btn_ant"
        android:layout_below="@+id/btn_dou2"
        android:layout_alignRight="@+id/btn_capstone"
        android:layout_alignEnd="@+id/btn_capstone"
        android:layout_alignLeft="@+id/btn_capstone"
        android:layout_alignStart="@+id/btn_capstone" />

    <Button
        style="@style/button_light"
        android:text="@string/materialize"
        android:id="@+id/btn_materialize"
        android:layout_below="@+id/btn_ant"
        android:layout_alignRight="@+id/btn_capstone"
        android:layout_alignEnd="@+id/btn_capstone"
        android:layout_alignLeft="@+id/btn_capstone"
        android:layout_alignStart="@+id/btn_capstone" />

    <Button
        style="@style/button_dark"
        android:text="@string/capstone"
        android:id="@+id/btn_capstone"
        android:layout_below="@+id/btn_materialize"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
